[package]
name = "pj"
version = "1.0.0"
authors = ["RoccoDev <roccodev.business@gmail.com>"]
description = "JSON parser and visualizer."
license = "GPL-3.0-or-later"
repository = "https://github.com/RoccoDev/pj.git"
readme = "README.md"

[dependencies]
serde_json = "1.0"
crossterm = "0.6"
crossterm_input = "0.1.0"

[dependencies.tui]
git = "https://github.com/fdehau/tui-rs"
default-features = false
features = ['crossterm']